--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App{
+  padding: 20px;
+}
+
+.App>nav>a{
+  margin: 10px;
+}
