--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -7,6 +7,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: 'LINESeedKR-Bd';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+.App>nav{
+  text-align: center;
+  margin : 0 auto;
+  display: block;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -18,4 +31,58 @@ code {
 
 .App>nav>a{
   margin: 10px;
+}
+
+.memobox{
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin : 0 auto;
+  display: block;
+  width: 310px;
+  background-color: #7C7877;
+}
+
+.savebutton{
+  width: 50px;
+  height: 30px;
+  font-family: "LINESeedKR-Bd";
+  margin : 0 auto;
+  display: block;
+  margin-top: 8px;
+  border-radius: 3px;
+  border: none;
+}
+
+.savebutton:hover{
+  transition: background-color 330ms;
+  background-color: #D9D4CF;
+}
+
+.title{
+  font-family: "LINESeedKR-Bd";
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: #D9D4CF;
+  font-size: 20px;
+  border-radius: 3px;
+  border: none;
+  margin : 0 auto;
+  margin-bottom: 10px;
+  display: block;
+  width: 300px;
+}
+
+textarea{
+  padding-top: 5px;
+  font-family: "LINESeedKR-Bd";
+  background-color: #D9D4CF;
+  font-size: 15px;
+  border-radius: 3px;
+  border: none;
+  margin : 0 auto;
+  display: block;
+  resize: none;
+  width: 300px;
+  height: 300px;
 }
