--- a/myapp/src/index.css
+++ b/myapp/src/index.css
@@ -88,6 +88,40 @@ code {
   background-color: #ABD0CE;
 }
 
+.updatebutton{
+  background-color: #D9D4CF;
+  width: 70px;
+  height: 30px;
+  font-family: "LINESeedKR-Bd";
+  margin : 0 auto;
+  display: block;
+  margin-top: 8px;
+  border-radius: 3px;
+  border: none;
+}
+
+.updatebutton:hover{
+  transition: background-color 330ms;
+  background-color: #ABD0CE;
+}
+
+.deletebutton{
+  background-color: #c6200e;
+  width: 70px;
+  height: 30px;
+  font-family: "LINESeedKR-Bd";
+  margin : 0 auto;
+  display: block;
+  margin-top: 8px;
+  border-radius: 3px;
+  border: none;
+}
+
+.deletebutton:hover{
+  transition: background-color 330ms;
+  background-color: #c66417;
+}
+
 .MemoListBox_div_main {
   margin-bottom: 10px;
   display: grid;
@@ -98,6 +132,46 @@ code {
 /*  transition: background-color 330ms;*/
 /*  background-color: #ABD0CE;*/
 /*}*/
+
+.getmemobox{
+  margin-top: 30px;
+}
+
+.pagenation_button_box{
+  display: grid;
+  grid-template-columns: 1fr 30px 1fr;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.pagenation_button {
+  color: #3c3535;
+  background-color: #D9D4CF;
+  width: 80px;
+  height: 30px;
+  font-family: "LINESeedKR-Bd";
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 8px;
+  border-radius: 3px;
+  border: none;
+}
+
+.pagenation_button:hover{
+  transition: background-color 330ms;
+  background-color: #ABD0CE;
+}
+
+.pagenation_remainpage{
+  color: #3c3535;
+  background-color: #D9D4CF;
+  font-family: "LINESeedKR-Bd";
+  padding-top: 4px;
+  border-radius: 10px;
+  text-align: center;
+  margin-top: 10px;
+}
 
 .MemoListBox_div_title:hover{
   transition: background-color 330ms;
@@ -134,20 +208,6 @@ code {
   border: solid #D9D4CF 3px;
 }
 
-.title{
-  font-family: "LINESeedKR-Bd";
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: #D9D4CF;
-  font-size: 20px;
-  border-radius: 3px;
-  border: none;
-  margin : 0 auto;
-  margin-bottom: 10px;
-  display: block;
-  width: 300px;
-}
-
 .MemoListBox{
   margin-top: 30px;
   margin-left :auto;
@@ -159,6 +219,20 @@ code {
   margin: 0;
   padding-left: 0;
   list-style: none;
+}
+
+.inserttitle{
+  font-family: "LINESeedKR-Bd";
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: #D9D4CF;
+  font-size: 20px;
+  border-radius: 3px;
+  border: none;
+  margin : 0 auto;
+  margin-bottom: 10px;
+  display: block;
+  width: 300px;
 }
 
 textarea{
@@ -173,4 +247,39 @@ textarea{
   resize: none;
   width: 300px;
   height: 300px;
+}
+
+.viewtitle{
+  font-family: "LINESeedKR-Bd";
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: #D9D4CF;
+  font-size: 20px;
+  border-radius: 3px;
+  border: none;
+  margin : 0 auto;
+  margin-bottom: 10px;
+  display: block;
+  width: 300px;
+}
+.viewtitle>div{
+  margin-left: 5px;
+}
+
+.viewcontent{
+  padding-top: 5px;
+  font-family: "LINESeedKR-Bd";
+  background-color: #D9D4CF;
+  font-size: 15px;
+  border-radius: 3px;
+  border: none;
+  margin : 0 auto;
+  display: block;
+  resize: none;
+  width: 300px;
+  height: 300px;
+}
+
+.viewcontent>div{
+  margin-left: 5px;
 }
